--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,13 @@
       <version>9.0.10</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.20</version>
+    </dependency>
+
+
 
   </dependencies>
 
